--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,300,700i,300i" rel="stylesheet" type="text/css"/>
       <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
       <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css" />
-      <!-- Tue Jul 17 2018 03:07:28 GMT+0000 (UTC) -->
+      <!-- Tue Jun 02 2020 00:24:50 GMT+0000 (Coordinated Universal Time) -->
     </head>
     <body>
       <div id="root"></div>
