--- a/demo/publicTemplate/index.html
+++ b/demo/publicTemplate/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/base.css"/>
     <link rel="stylesheet" href="./css/prism.css"/>
     <link rel="stylesheet" href="./css/CheckableListItem.css"/>
+    <link rel="stylesheet" href="./css/Draft.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,300,700i,300i" rel="stylesheet" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css" />
